--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -586,7 +586,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<h1>w12</h1>
+</div>
+</div><h1>w12</h1>
 <p></p>
 <p>各分組在執行<span> </span><a href="https://mde.tw/cd2022_guide/content/w8%20%E4%BB%BB%E5%8B%99.html">w8 任務</a>之後, 請回答下列問題:</p>
 <ol>
@@ -619,7 +620,5 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>NX及CoppeliaSim整合</p>
-</div>
-</div>
 </div>
 </div>
