--- a/config/content.htm
+++ b/config/content.htm
@@ -616,9 +616,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<h1>online</h1>
+</div>
+</div><h1>online</h1>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>NX及CoppeliaSim整合</p>
-</div>
-</div>
