--- a/content/online.html
+++ b/content/online.html
@@ -143,10 +143,7 @@ img.add_border {
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>NX及CoppeliaSim整合</p>
-</div>
-</div>
-</div>
-</div><br />w12 << <a href='w12.html'>Previous</a> </div>
+<br />w12 << <a href='w12.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
