--- a/content/w10_block_ui.html
+++ b/content/w10_block_ui.html
@@ -163,8 +163,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<br />w10 << <a href='w10.html'>Previous</a> <a href='w10_nx_integ.html'>Next</a> >> w10_nx_integ</div>
+</div><br />w10 << <a href='w10.html'>Previous</a> <a href='w10_nx_integ.html'>Next</a> >> w10_nx_integ</div>
         
     <!-- footer -->
       <div class="container">
