--- a/content/w10_ssh.html
+++ b/content/w10_ssh.html
@@ -161,7 +161,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<br />w10_nx_integ << <a href='w10_nx_integ.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+</div>
+</div><br />w10_nx_integ << <a href='w10_nx_integ.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
     <!-- footer -->
       <div class="container">
