--- a/content/w12.html
+++ b/content/w12.html
@@ -168,7 +168,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<br />w10_ssh << <a href='w10_ssh.html'>Previous</a> <a href='online.html'>Next</a> >> online</div>
+</div>
+</div><br />w10_ssh << <a href='w10_ssh.html'>Previous</a> <a href='online.html'>Next</a> >> online</div>
         
     <!-- footer -->
       <div class="container">
