--- a/content/w2.html
+++ b/content/w2.html
@@ -432,7 +432,8 @@ img.add_border {
 <td style="width: 65.1px;"><a href="https://40923248.github.io/cd2022/content/index.html">40923248</a></td>
 </tr>
 </tbody>
-</table><br />About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+</table>
+<br />About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
