--- a/content/w3.html
+++ b/content/w3.html
@@ -269,7 +269,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 </div>
-</div><br />w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+</div>
+<br />w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
