--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -616,9 +616,149 @@ var winkVideoData = {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<h1>online</h1>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoPlayOverlayClass"></div>
-<p>NX及CoppeliaSim整合</p>
+</div>
+</div><h1>online</h1>
+<p>遠距上課</p>
+<p><span>請登入 </span><a href="https://onedrive.live.com/">onedrive</a><span><span> </span>後, 觀看課程教學影片:</span></p>
+<p>1.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EcmwzqLi1_FEgyi7Gh3vOb8BoE9pYbbw6CLF17_brvJing?e=ff8b2d">cd2022_w13_2b_part1.mp4</a><span> </span>(NX 與 CoppeliaSim 整合應用項目說明)</p>
+<p>2.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EegXPYSdUGJItXCyCsTtne8Bu0gGNgp7a7Kub3UO-wNPSQ?e=isZv8C">cd2022_w13_2b_part2.mp4</a><span> </span>(uArm 主體零件工程圖取尺寸流程說明)</p>
+<p>3.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EcsSMO-AE7pHkgUbAvklEtABvb0_vlKVJZ5Q3Qqaql8MYQ?e=0xUVZK">cd2022_w13_2b_part3.mp4</a><span> </span>(說明如何在線上讀取各學員每週任務進度)</p>
+<p><a href="https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/76f525f56ce4def0316d4b46af8e9100f91c21c8/check_cd2022_page.py">check_cd2022_page.py</a></p>
+<p>4.<span> </span><a href="https://mde.tw/cd2022_guide/blog/w12-nx-integrated-with-coppeliasim.html">NX 與 CoppeliaSim 整合</a></p>
+<p><a href="https://gmnfuedutw-my.sharepoint.com/:u:/g/personal/yen_gm_nfu_edu_tw/Eb_cz1VtR4pLl1-7BL6z_2MB-7Wwu1M2CQ8lndlVEBEQbw?e=cScxsY">mtb_nx.7z</a></p>
+<p><img caption="false" height="233" src="https://mde.tw/cd2022_guide/images/MTB_in_NX12.png" width="400"/></p>
+<p>除 base fixed 外, 其餘轉動軸約束均以 align 結合 distance 定位:</p>
+<p><img caption="false" height="249" src="https://mde.tw/cd2022_guide/images/MTB_align_distance.png" width="200"/></p>
+<p>轉入 CoppeliaSim 4.3.0 rev3:</p>
+<p><img alt="" height="202" src="https://mde.tw/cd2022_guide/images/MTB_nx_in_copsim.png" width="400"/></p>
+<div class="winkVideoPlayOverlayClass">
+<p>導入外部 Python 程式碼:</p>
+<p></p>
+<div>
+<div class="syntaxhighlighter py" id="highlighter_596912">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+<div class="line number2 index1 alt1">2</div>
+<div class="line number3 index2 alt2">3</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="py comments">#python</code></div>
+<div class="line number2 index1 alt1"><code class="py comments"># 導入與 .ttt 相同目錄的 external_python.py</code></div>
+<div class="line number3 index2 alt2"><code class="py plain">include external_python</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
+<p>external_python.py 內容:</p>
+<p></p>
+<div>
+<div class="syntaxhighlighter py" id="highlighter_464907">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+<div class="line number2 index1 alt1">2</div>
+<div class="line number3 index2 alt2">3</div>
+<div class="line number4 index3 alt1">4</div>
+<div class="line number5 index4 alt2">5</div>
+<div class="line number6 index5 alt1">6</div>
+<div class="line number7 index6 alt2">7</div>
+<div class="line number8 index7 alt1">8</div>
+<div class="line number9 index8 alt2">9</div>
+<div class="line number10 index9 alt1">10</div>
+<div class="line number11 index10 alt2">11</div>
+<div class="line number12 index11 alt1">12</div>
+<div class="line number13 index12 alt2">13</div>
+<div class="line number14 index13 alt1">14</div>
+<div class="line number15 index14 alt2">15</div>
+<div class="line number16 index15 alt1">16</div>
+<div class="line number17 index16 alt2">17</div>
+<div class="line number18 index17 alt1">18</div>
+<div class="line number19 index18 alt2">19</div>
+<div class="line number20 index19 alt1">20</div>
+<div class="line number21 index20 alt2">21</div>
+<div class="line number22 index21 alt1">22</div>
+<div class="line number23 index22 alt2">23</div>
+<div class="line number24 index23 alt1">24</div>
+<div class="line number25 index24 alt2">25</div>
+<div class="line number26 index25 alt1">26</div>
+<div class="line number27 index26 alt2">27</div>
+<div class="line number28 index27 alt1">28</div>
+<div class="line number29 index28 alt2">29</div>
+<div class="line number30 index29 alt1">30</div>
+<div class="line number31 index30 alt2">31</div>
+<div class="line number32 index31 alt1">32</div>
+<div class="line number33 index32 alt2">33</div>
+<div class="line number34 index33 alt1">34</div>
+<div class="line number35 index34 alt2">35</div>
+<div class="line number36 index35 alt1">36</div>
+<div class="line number37 index36 alt2">37</div>
+<div class="line number38 index37 alt1">38</div>
+<div class="line number39 index38 alt2">39</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="py comments">'''</code></div>
+<div class="line number2 index1 alt1"><code class="py comments">#在 CoppeliaSim cube nonthreaded script 內容, 宣告使用 python 語法, 且導入</code></div>
+<div class="line number3 index2 alt2"><code class="py comments">#外部 external_python.py 程式碼</code></div>
+<div class="line number4 index3 alt1"> </div>
+<div class="line number5 index4 alt2"><code class="py comments">#python</code></div>
+<div class="line number6 index5 alt1"> </div>
+<div class="line number7 index6 alt2"><code class="py comments">include external_python</code></div>
+<div class="line number8 index7 alt1"><code class="py comments">'''</code></div>
+<div class="line number9 index8 alt2"><code class="py keyword">import</code> <code class="py plain">math</code></div>
+<div class="line number10 index9 alt1"> </div>
+<div class="line number11 index10 alt2"><code class="py keyword">def</code> <code class="py plain">sysCall_init():</code></div>
+<div class="line number12 index11 alt1"><code class="py spaces">    </code><code class="py functions">print</code><code class="py plain">(</code><code class="py string">"From non-threaded Python child script, sysCall_init"</code><code class="py plain">)</code></div>
+<div class="line number13 index12 alt2"><code class="py spaces">    </code><code class="py comments"># 因為在函式內改變全域變數 cube 的值, 必須宣告為 global</code></div>
+<div class="line number14 index13 alt1"><code class="py spaces">    </code><code class="py keyword">global</code> <code class="py plain">cube</code></div>
+<div class="line number15 index14 alt2"><code class="py spaces">    </code><code class="py comments"># 取得 script 所在物件, 與 cube 變數對應</code></div>
+<div class="line number16 index15 alt1"><code class="py spaces">    </code><code class="py plain">cube</code><code class="py keyword">=</code><code class="py plain">sim.getObject(</code><code class="py string">'.'</code><code class="py plain">)</code></div>
+<div class="line number17 index16 alt2"><code class="py spaces">    </code><code class="py keyword">global</code> <code class="py plain">pos</code></div>
+<div class="line number18 index17 alt1"><code class="py spaces">    </code><code class="py plain">pos</code><code class="py keyword">=</code><code class="py plain">sim.getObjectPosition(cube,</code><code class="py keyword">-</code><code class="py value">1</code><code class="py plain">)</code></div>
+<div class="line number19 index18 alt2"><code class="py spaces">    </code><code class="py keyword">global</code> <code class="py plain">deg, theta</code></div>
+<div class="line number20 index19 alt1"><code class="py spaces">    </code><code class="py plain">deg </code><code class="py keyword">=</code> <code class="py plain">math.pi</code><code class="py keyword">/</code><code class="py value">180.</code></div>
+<div class="line number21 index20 alt2"><code class="py spaces">    </code><code class="py plain">theta </code><code class="py keyword">=</code> <code class="py value">0</code></div>
+<div class="line number22 index21 alt1"><code class="py spaces">    </code> </div>
+<div class="line number23 index22 alt2"><code class="py keyword">def</code> <code class="py plain">sysCall_actuation():</code></div>
+<div class="line number24 index23 alt1"><code class="py spaces">    </code><code class="py functions">print</code><code class="py plain">(</code><code class="py string">"From non-threaded Python child script, sysCall_actuation"</code><code class="py plain">)</code></div>
+<div class="line number25 index24 alt2"><code class="py spaces">    </code><code class="py keyword">global</code> <code class="py plain">theta</code></div>
+<div class="line number26 index25 alt1"><code class="py spaces">    </code><code class="py comments"># 順時鐘繞行</code></div>
+<div class="line number27 index26 alt2"><code class="py spaces">    </code><code class="py plain">theta </code><code class="py keyword">=</code> <code class="py plain">theta </code><code class="py keyword">-</code> <code class="py value">0.01</code></div>
+<div class="line number28 index27 alt1"><code class="py spaces">    </code><code class="py comments"># 以 (pos[0]-1, pos[1]) 為圓心, 半徑 1m 繞行</code></div>
+<div class="line number29 index28 alt2"><code class="py spaces">    </code><code class="py plain">pos[</code><code class="py value">0</code><code class="py plain">] </code><code class="py keyword">=</code> <code class="py plain">math.cos(theta)</code><code class="py keyword">-</code><code class="py value">1</code></div>
+<div class="line number30 index29 alt1"><code class="py spaces">    </code><code class="py functions">print</code><code class="py plain">(pos[</code><code class="py value">0</code><code class="py plain">])</code></div>
+<div class="line number31 index30 alt2"><code class="py spaces">    </code><code class="py plain">pos[</code><code class="py value">1</code><code class="py plain">] </code><code class="py keyword">=</code> <code class="py plain">math.sin(theta)</code></div>
+<div class="line number32 index31 alt1"><code class="py spaces">    </code><code class="py functions">print</code><code class="py plain">(pos[</code><code class="py value">1</code><code class="py plain">])</code></div>
+<div class="line number33 index32 alt2"><code class="py spaces">    </code><code class="py comments">#pos[1]=pos[1]+0.01</code></div>
+<div class="line number34 index33 alt1"><code class="py spaces">    </code><code class="py plain">sim.setObjectPosition(cube,</code><code class="py keyword">-</code><code class="py value">1</code><code class="py plain">,pos)</code></div>
+<div class="line number35 index34 alt2"><code class="py spaces">    </code> </div>
+<div class="line number36 index35 alt1"><code class="py keyword">def</code> <code class="py plain">sysCall_sensing():    </code></div>
+<div class="line number37 index36 alt2"><code class="py spaces">    </code><code class="py functions">print</code><code class="py plain">(</code><code class="py string">"From non-threaded Python child script, sysCall_sensing"</code><code class="py plain">)</code></div>
+<div class="line number38 index37 alt1"><code class="py keyword">def</code> <code class="py plain">sysCall_cleanup():</code></div>
+<div class="line number39 index38 alt2"><code class="py spaces">    </code><code class="py functions">print</code><code class="py plain">(</code><code class="py string">"From non-threaded Python child script, sysCall_cleanup"</code><code class="py plain">)</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+<p></p>
+</div>
+</div>
+<p><a href="https://gmnfuedutw-my.sharepoint.com/:u:/g/personal/yen_gm_nfu_edu_tw/EQyVkOkgW2NFjw1O3OtL1KcBLt57bkAdTEdtzqpFwkpA7g?e=u1ZvnI">nx_coppeliasim_cube_python.7z</a></p>
+<p></p>
+<h2>w13</h2>
+<p>nx及CoppeliaSim整合</p>
+<p>下載CoppeliaSim EDU版</p>
+<p>為CoppeliaSim第3版</p>
+<p><img alt="" height="630" src="/images/1.png" width="1008"/></p>
+<p></p>
+<p><img alt="" height="630" src="/images/2.png" width="1189"/></p></div>
