--- a/content/w13.html
+++ b/content/w13.html
@@ -2,6 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -138,12 +139,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w2.html'>Next</a> >> w2<br /><h1>About</h1>
-<p>cmsimde_site</p>
-<p>個人倉儲:<a href="https://github.com/40923210/cd2022">https://github.com/40923210/cd2022</a></p>
-<p>個人網頁:<a href="https://40923210.github.io/cd2022/content/index.html">https://40923210.github.io/cd2022/content/index.html</a></p>
+    <div id="tipue_search_content">online << <a href='online.html'>Previous</a> <br /><h1>w13</h1>
+<p>nx及CoppeliaSim整合</p>
+<p>下載CoppeliaSim EDU版</p>
+<p>為CoppeliaSim第3版</p>
+<p><img alt="" height="630" src="./../images/1.png" width="1008"/></p>
 <p></p>
-<br /> <a href='w2.html'>Next</a> >> w2</div>
+<p>將圖檔導入CoppeliaSim</p>
+<p><img alt="" height="630" src="./../images/2.png" width="1189"/></p></div><br />online << <a href='online.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
