change w13 image absolute site

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -761,4 +761,5 @@ var winkVideoData = {
 <p>為CoppeliaSim第3版</p>
 <p><img alt="" height="630" src="/images/1.png" width="1008"/></p>
 <p></p>
+<p>將圖檔導入CoppeliaSim</p>
 <p><img alt="" height="630" src="/images/2.png" width="1189"/></p></div>
