--- a/content/w13.html
+++ b/content/w13.html
@@ -143,10 +143,10 @@ img.add_border {
 <p>nx及CoppeliaSim整合</p>
 <p>下載CoppeliaSim EDU版</p>
 <p>為CoppeliaSim第3版</p>
-<p><img alt="" height="630" src="./../images/1.png" width="1008"/></p>
+<p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/1.png" width="1008"/></p>
 <p></p>
 <p>將圖檔導入CoppeliaSim</p>
-<p><img alt="" height="630" src="./../images/2.png" width="1189"/></p></div><br />online << <a href='online.html'>Previous</a> </div>
+<p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/2.png" width="1008"/></p></div><br />online << <a href='online.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
