--- a/content/w13.html
+++ b/content/w13.html
@@ -140,13 +140,28 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">online << <a href='online.html'>Previous</a> <br /><h1>w13</h1>
+<p><span>請登入 </span><a href="https://onedrive.live.com/">onedrive</a><span> 後, 觀看課程教學影片:</span></p>
+<p>1.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EcmwzqLi1_FEgyi7Gh3vOb8BoE9pYbbw6CLF17_brvJing?e=ff8b2d">cd2022_w13_2b_part1.mp4</a><span> </span>(NX 與 CoppeliaSim 整合應用項目說明)</p>
+<p>2.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EegXPYSdUGJItXCyCsTtne8Bu0gGNgp7a7Kub3UO-wNPSQ?e=isZv8C">cd2022_w13_2b_part2.mp4</a><span> </span>(uArm 主體零件工程圖取尺寸流程說明)</p>
+<p>3.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EcsSMO-AE7pHkgUbAvklEtABvb0_vlKVJZ5Q3Qqaql8MYQ?e=0xUVZK">cd2022_w13_2b_part3.mp4</a><span> </span>(說明如何在線上讀取各學員每週任務進度)</p>
+<p><a href="https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/76f525f56ce4def0316d4b46af8e9100f91c21c8/check_cd2022_page.py">check_cd2022_page.py</a></p>
+<p>4.<span> </span><a href="https://mde.tw/cd2022_guide/blog/w12-nx-integrated-with-coppeliasim.html">NX 與 CoppeliaSim 整合</a></p>
+<p><a href="https://gmnfuedutw-my.sharepoint.com/:u:/g/personal/yen_gm_nfu_edu_tw/Eb_cz1VtR4pLl1-7BL6z_2MB-7Wwu1M2CQ8lndlVEBEQbw?e=cScxsY">mtb_nx.7z</a></p>
+<p><img caption="false" height="233" src="https://mde.tw/cd2022_guide/images/MTB_in_NX12.png" width="400"/></p>
+<p>除 base fixed 外, 其餘轉動軸約束均以 align 結合 distance 定位:</p>
+<p><img caption="false" height="249" src="https://mde.tw/cd2022_guide/images/MTB_align_distance.png" width="200"/></p>
+<p>轉入 CoppeliaSim 4.3.0 rev3:</p>
+<p><img alt="" height="202" src="https://mde.tw/cd2022_guide/images/MTB_nx_in_copsim.png" width="400"/></p>
+<div class="winkVideoPlayOverlayClass">
+<p></p>
+</div>
 <p>nx及CoppeliaSim整合</p>
 <p>下載CoppeliaSim EDU版</p>
 <p>為CoppeliaSim第3版</p>
 <p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/1.png" width="1008"/></p>
 <p></p>
 <p>將圖檔導入CoppeliaSim</p>
-<p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/2.png" width="1008"/></p></div><br />online << <a href='online.html'>Previous</a> </div>
+<p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/2.png" width="1008"/></p><br />online << <a href='online.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
