--- a/config/content.htm
+++ b/config/content.htm
@@ -618,14 +618,15 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 </div>
 </div><h1>online</h1>
+<p></p>
 <p>為配合學校因應疫情所作的課程教學措施:</p>
+<p>線上教學訊息發布區:<a href="https://gitter.im/mdecourse/cd2022"> https://gitter.im/mdecourse/cd2022</a></p>
+<p>線上同步教學系統:<a href="https://teams.microsoft.com">https://teams.microsoft.com</a> (請利用 @gm 註冊帳號後, 每週透過 Team code 進入 channel 上課)</p>
+<p>協同產品設計實習課程倉儲:<a href="https://github.com/mdecycu/cd2022_guide"> https://github.com/mdecycu/cd2022_guide</a></p>
+<p>協同產品設計實習課程網頁: <a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
+<p>課程相關檔案下載: <a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88/ </a>(請設定 17.4 代理主機, 並輸入認證帳號與密碼後連線下載)</p>
+<p></p>
 <div class="winkVideoPlayOverlayClass">
-<p>線上教學訊息發布區:<span> </span><a href="https://gitter.im/mdecourse/cd2022">https://gitter.im/mdecourse/cd2022</a></p>
-<p>線上同步教學系統:</p>
-<p><a href="https://teams.microsoft.com/">https://teams.microsoft.com</a> (請利用 @gm<span> </span><a href="https://mde.tw/wcm2022_guide/content/OneDrive.html">註冊帳號</a>後, 每週透過 Team code 進入 channel 上課)</p>
-<p>協同產品設計實習課程倉儲:<span> </span><a href="https://github.com/mdecycu/cd2022_guide">https://github.com/mdecycu/cd2022_guide</a></p>
-<p>協同產品設計實習課程網頁:<span> </span><a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
-<p>課程相關檔案下載:<span> </span><a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88/</a><span> </span>(請設定 17.4 代理主機, 並輸入認證帳號與密碼後連線下載)</p>
 <p><img alt="" class="add_border" height="492" src="https://mde.tw/cd2022_guide/images/20220517_online_learning.png" width="800"/></p>
 </div><h2>w13</h2>
 <p><span>請登入 </span><a href="https://onedrive.live.com/">onedrive</a><span> 後, 觀看課程教學影片:</span></p>
