--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,3 +1,4 @@
+<h1>First</h1>
 <h1>About</h1>
 <p>cmsimde_site</p>
 <p>個人倉儲:<a href="https://github.com/40923210/cd2022">https://github.com/40923210/cd2022</a></p>
@@ -540,7 +541,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h2>w10_nx_integ</h2>
+</div>
+<h2>w10_nx_integ</h2>
 <p>
 <script>
 var winkVideoData = {
@@ -564,7 +566,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h2>w10_ssh</h2>
+</div>
+<h2>w10_ssh</h2>
 <p></p>
 <p>
 <script>
@@ -587,7 +590,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 </div>
-</div><h1>w12</h1>
+</div>
+<h1>w12</h1>
 <p></p>
 <p>各分組在執行<span> </span><a href="https://mde.tw/cd2022_guide/content/w8%20%E4%BB%BB%E5%8B%99.html">w8 任務</a>之後, 請回答下列問題:</p>
 <ol>
@@ -617,9 +621,20 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 </div>
-</div><h1>online</h1>
+</div>
+<h1>online</h1>
 <p></p>
-<p>為配合學校因應疫情所作的課程教學措施:</p><h2>w13</h2>
+<p>為配合學校因應疫情所作的課程教學措施:</p>
+<p>線上教學訊息發布區:<a href="https://gitter.im/mdecourse/cd2022"> https://gitter.im/mdecourse/cd2022</a></p>
+<p>線上同步教學系統:<a href="https://teams.microsoft.com">https://teams.microsoft.com</a> (請利用 @gm 註冊帳號後, 每週透過 Team code 進入 channel 上課)</p>
+<p>協同產品設計實習課程倉儲:<a href="https://github.com/mdecycu/cd2022_guide"> https://github.com/mdecycu/cd2022_guide</a></p>
+<p>協同產品設計實習課程網頁: <a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
+<p>課程相關檔案下載: <a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88/ </a>(請設定 17.4 代理主機, 並輸入認證帳號與密碼後連線下載)</p>
+<p></p>
+<div class="winkVideoPlayOverlayClass">
+<p><img alt="" class="add_border" height="492" src="https://mde.tw/cd2022_guide/images/20220517_online_learning.png" width="800"/></p>
+</div>
+<h2>w13</h2>
 <p><span>請登入 </span><a href="https://onedrive.live.com/">onedrive</a><span> 後, 觀看課程教學影片:</span></p>
 <p>1.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EcmwzqLi1_FEgyi7Gh3vOb8BoE9pYbbw6CLF17_brvJing?e=ff8b2d">cd2022_w13_2b_part1.mp4</a><span> </span>(NX 與 CoppeliaSim 整合應用項目說明)</p>
 <p>2.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EegXPYSdUGJItXCyCsTtne8Bu0gGNgp7a7Kub3UO-wNPSQ?e=isZv8C">cd2022_w13_2b_part2.mp4</a><span> </span>(uArm 主體零件工程圖取尺寸流程說明)</p>
@@ -642,3 +657,4 @@ var winkVideoData = {
 <p></p>
 <p>將圖檔導入CoppeliaSim</p>
 <p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/2.png" width="1008"/></p>
+<h2>w14</h2>
