--- a/content/w13.html
+++ b/content/w13.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">online << <a href='online.html'>Previous</a> <br /><h1>w13</h1>
+    <div id="tipue_search_content">online << <a href='online.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w13</h1>
 <p><span>請登入 </span><a href="https://onedrive.live.com/">onedrive</a><span> 後, 觀看課程教學影片:</span></p>
 <p>1.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EcmwzqLi1_FEgyi7Gh3vOb8BoE9pYbbw6CLF17_brvJing?e=ff8b2d">cd2022_w13_2b_part1.mp4</a><span> </span>(NX 與 CoppeliaSim 整合應用項目說明)</p>
 <p>2.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EegXPYSdUGJItXCyCsTtne8Bu0gGNgp7a7Kub3UO-wNPSQ?e=isZv8C">cd2022_w13_2b_part2.mp4</a><span> </span>(uArm 主體零件工程圖取尺寸流程說明)</p>
@@ -161,7 +161,8 @@ img.add_border {
 <p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/1.png" width="1008"/></p>
 <p></p>
 <p>將圖檔導入CoppeliaSim</p>
-<p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/2.png" width="1008"/></p><br />online << <a href='online.html'>Previous</a> </div>
+<p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/2.png" width="1008"/></p>
+<br />online << <a href='online.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
       <div class="container">
