--- a/config/content.htm
+++ b/config/content.htm
@@ -1,3 +1,4 @@
+<h1>First</h1>
 <h1>About</h1>
 <p>cmsimde_site</p>
 <p>個人倉儲:<a href="https://github.com/40923210/cd2022">https://github.com/40923210/cd2022</a></p>
@@ -540,7 +541,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h2>w10_nx_integ</h2>
+</div>
+<h2>w10_nx_integ</h2>
 <p>
 <script>
 var winkVideoData = {
@@ -564,7 +566,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h2>w10_ssh</h2>
+</div>
+<h2>w10_ssh</h2>
 <p></p>
 <p>
 <script>
@@ -587,7 +590,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 </div>
-</div><h1>w12</h1>
+</div>
+<h1>w12</h1>
 <p></p>
 <p>各分組在執行<span> </span><a href="https://mde.tw/cd2022_guide/content/w8%20%E4%BB%BB%E5%8B%99.html">w8 任務</a>之後, 請回答下列問題:</p>
 <ol>
@@ -617,7 +621,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 </div>
-</div><h1>online</h1>
+</div>
+<h1>online</h1>
 <p></p>
 <p>為配合學校因應疫情所作的課程教學措施:</p>
 <p>線上教學訊息發布區:<a href="https://gitter.im/mdecourse/cd2022"> https://gitter.im/mdecourse/cd2022</a></p>
@@ -628,7 +633,8 @@ var winkVideoData = {
 <p></p>
 <div class="winkVideoPlayOverlayClass">
 <p><img alt="" class="add_border" height="492" src="https://mde.tw/cd2022_guide/images/20220517_online_learning.png" width="800"/></p>
-</div><h2>w13</h2>
+</div>
+<h2>w13</h2>
 <p><span>請登入 </span><a href="https://onedrive.live.com/">onedrive</a><span> 後, 觀看課程教學影片:</span></p>
 <p>1.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EcmwzqLi1_FEgyi7Gh3vOb8BoE9pYbbw6CLF17_brvJing?e=ff8b2d">cd2022_w13_2b_part1.mp4</a><span> </span>(NX 與 CoppeliaSim 整合應用項目說明)</p>
 <p>2.<span> </span><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EegXPYSdUGJItXCyCsTtne8Bu0gGNgp7a7Kub3UO-wNPSQ?e=isZv8C">cd2022_w13_2b_part2.mp4</a><span> </span>(uArm 主體零件工程圖取尺寸流程說明)</p>
@@ -651,3 +657,32 @@ var winkVideoData = {
 <p></p>
 <p>將圖檔導入CoppeliaSim</p>
 <p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/2.png" width="1008"/></p>
+<h2>w14</h2>
+<ol>
+<li><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EUXfX4gfanBLhsgFnOnenYABnAF5wLQdG_WCeV3ElvxGww?e=qogc4M">2b_w14_part1.mp4</a><span> </span>(說明如何利用 Leo Editor 與 Python 編寫 CoppeliaSim 場景中的控制程式,<span> </span><a href="https://mde.tw/cd2022_guide/downloads/w14/w14_copsim_py_leo_ttt.7z">w14_copsim_py_leo_ttt.7z</a>)</li>
+<li><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EYN-ut16-J5CkHxzYFYLUaMBJTTaCjnzhdF0qHoMgCdurw?e=1dCUke">2b_w14_part2.mp4</a><span> </span>(說明如何利用 Lua 編寫 MTB robot 機械手臂的控制程式)</li>
+<li><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EflGSj2elMBNgIVHrkgt06EBCku3532ovvk-OnP0jwoSMg?e=iYqI9g">2b_w14_part3.mp4</a><span> </span>(說明如何利用 Lua 引入 suctionpad component 執行物件吸取與釋放)</li>
+</ol>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="/downloads/0526.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
