--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -658,3 +658,31 @@ var winkVideoData = {
 <p>將圖檔導入CoppeliaSim</p>
 <p><img alt="" height="630" src="https://40923210.github.io/cd2022/images/2.png" width="1008"/></p>
 <h2>w14</h2>
+<ol>
+<li><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EUXfX4gfanBLhsgFnOnenYABnAF5wLQdG_WCeV3ElvxGww?e=qogc4M">2b_w14_part1.mp4</a><span> </span>(說明如何利用 Leo Editor 與 Python 編寫 CoppeliaSim 場景中的控制程式,<span> </span><a href="https://mde.tw/cd2022_guide/downloads/w14/w14_copsim_py_leo_ttt.7z">w14_copsim_py_leo_ttt.7z</a>)</li>
+<li><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EYN-ut16-J5CkHxzYFYLUaMBJTTaCjnzhdF0qHoMgCdurw?e=1dCUke">2b_w14_part2.mp4</a><span> </span>(說明如何利用 Lua 編寫 MTB robot 機械手臂的控制程式)</li>
+<li><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EflGSj2elMBNgIVHrkgt06EBCku3532ovvk-OnP0jwoSMg?e=iYqI9g">2b_w14_part3.mp4</a><span> </span>(說明如何利用 Lua 引入 suctionpad component 執行物件吸取與釋放)</li>
+</ol>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="/downloads/0526.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
