--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -448,7 +448,8 @@ var winkVideoData = {
 <p><span><span><span><span><span><span>7.scarysim.bat<span>內容為下圖所示(找到自己檔案所在位置並複製檔案路徑)</span></span></span></span></span></span></span></p>
 <p><span><span><span><span><span><span><span><img alt="" height="630" src="https://40923210.github.io/cd2022/images/%E5%9C%96%E7%89%877.png" width="1008"/></span></span></span></span></span></span></span></p>
 <p><span><span><span><span><span><span><span>8.更改後開啟 <span>scarysim.bat</span><span><span> </span>可顯示下圖紅框所示</span></span></span></span></span></span></span></span></p>
-<p><span><span><span><span><span><span><span><span><img alt="" height="630" src="https://40923210.github.io/cd2022/images/%E5%9C%96%E7%89%879.png" width="1008"/></span></span></span></span></span></span></span></span></p><h1>w8</h1>
+<p><span><span><span><span><span><span><span><span><img alt="" height="630" src="https://40923210.github.io/cd2022/images/%E5%9C%96%E7%89%879.png" width="1008"/></span></span></span></span></span></span></span></span></p>
+<h1>w8</h1>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>繪製零件檔</p>
 <p>
@@ -699,8 +700,11 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div>
+<h2>w16</h2>
+<div class="winkVideoPlayOverlayClass"><span>線上課程影片:</span></div>
+<div class="winkVideoPlayOverlayClass">
+<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EbAlwOD__R9Etqr8HHE4xz4BkPF3ZxHs--_OR8b0vMBRVQ">cd2022_w16_2b_part1.mp4</a><span> </span>(以下範例的 demo 說明)</p>
+<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/ET5nXVwHyCFJmv0J4mQNteIBUZ1iRWW-yJNCgLaMesskZQ?e=oGZDrx">cd2022_w16_2b_part2.mp4</a><span> </span>(rotating cuboid 與 vision sensor 在 remote API 與網際介面環境下的應用)</p>
+<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EdxLGcSqPupOqk-re8LdhkEB-XhuhV6zsiZdOMi8sYT9MA?e=Cbyi0a">cd2022_w16_2b_part3.mp4</a><span> </span>(說明 CoppeliaSim 4.3.0 visualization stream 功能應用)</p>
+<h3>Visualization Stream</h3>
+</div></div></div>
