--- a/content/w16.html
+++ b/content/w16.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,19 +139,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>online</h1>
-<p></p>
-<p>為配合學校因應疫情所作的課程教學措施:</p>
-<p>線上教學訊息發布區:<a href="https://gitter.im/mdecourse/cd2022"> https://gitter.im/mdecourse/cd2022</a></p>
-<p>線上同步教學系統:<a href="https://teams.microsoft.com">https://teams.microsoft.com</a> (請利用 @gm 註冊帳號後, 每週透過 Team code 進入 channel 上課)</p>
-<p>協同產品設計實習課程倉儲:<a href="https://github.com/mdecycu/cd2022_guide"> https://github.com/mdecycu/cd2022_guide</a></p>
-<p>協同產品設計實習課程網頁: <a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
-<p>課程相關檔案下載: <a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88/ </a>(請設定 17.4 代理主機, 並輸入認證帳號與密碼後連線下載)</p>
-<p></p>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='Visualization Stream.html'>Next</a> >> Visualization Stream<br /><h1>w16</h1>
+<div class="winkVideoPlayOverlayClass"><span>線上課程影片:</span></div>
 <div class="winkVideoPlayOverlayClass">
-<p><img alt="" class="add_border" height="492" src="https://mde.tw/cd2022_guide/images/20220517_online_learning.png" width="800"/></p>
-</div>
-<br />w12 << <a href='w12.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EbAlwOD__R9Etqr8HHE4xz4BkPF3ZxHs--_OR8b0vMBRVQ">cd2022_w16_2b_part1.mp4</a><span> </span>(以下範例的 demo 說明)</p>
+<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/ET5nXVwHyCFJmv0J4mQNteIBUZ1iRWW-yJNCgLaMesskZQ?e=oGZDrx">cd2022_w16_2b_part2.mp4</a><span> </span>(rotating cuboid 與 vision sensor 在 remote API 與網際介面環境下的應用)</p>
+<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EdxLGcSqPupOqk-re8LdhkEB-XhuhV6zsiZdOMi8sYT9MA?e=Cbyi0a">cd2022_w16_2b_part3.mp4</a><span> </span>(說明 CoppeliaSim 4.3.0 visualization stream 功能應用)</p>
+<br />w14 << <a href='w14.html'>Previous</a> <a href='Visualization Stream.html'>Next</a> >> Visualization Stream</div>
         
     <!-- footer -->
       <div class="container">
