--- a/content/w7.html
+++ b/content/w7.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li class='has-children'><a href='w16.html'>w16</a><ul class='dropdown'><li><a href='Visualization Stream.html'>Visualization Stream</a></li>
                       </ul>
                 </nav>
               </div>
@@ -159,7 +159,8 @@ img.add_border {
 <p><span><span><span><span><span><span>7.scarysim.bat<span>內容為下圖所示(找到自己檔案所在位置並複製檔案路徑)</span></span></span></span></span></span></span></p>
 <p><span><span><span><span><span><span><span><img alt="" height="630" src="https://40923210.github.io/cd2022/images/%E5%9C%96%E7%89%877.png" width="1008"/></span></span></span></span></span></span></span></p>
 <p><span><span><span><span><span><span><span>8.更改後開啟 <span>scarysim.bat</span><span><span> </span>可顯示下圖紅框所示</span></span></span></span></span></span></span></span></p>
-<p><span><span><span><span><span><span><span><span><img alt="" height="630" src="https://40923210.github.io/cd2022/images/%E5%9C%96%E7%89%879.png" width="1008"/></span></span></span></span></span></span></span></span></p><br />w3 << <a href='w3.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+<p><span><span><span><span><span><span><span><span><img alt="" height="630" src="https://40923210.github.io/cd2022/images/%E5%9C%96%E7%89%879.png" width="1008"/></span></span></span></span></span></span></span></span></p>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
