--- a/content/w6.html
+++ b/content/w6.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,15 +139,33 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='Visualization Stream.html'>Next</a> >> Visualization Stream<br /><h1>w16</h1>
-<p>線上課程影片:</p>
-<p></p>
-<p><a href="/get_page/w16/cd2022_w16_2b_part1.mp4">cd2022_w16_2b_part1.mp4</a> (以下範例的 demo 說明)</p>
-<p><a href="/get_page/w16/cd2022_w16_2b_part2.mp4">cd2022_w16_2b_part2.mp4 </a>(rotating cuboid 與 vision sensor 在 remote API 與網際介面環境下的應用)</p>
-<p><a href="/get_page/w16/cd2022_w16_2b_part3.mp4">cd2022_w16_2b_part3.mp4</a> (說明 CoppeliaSim 4.3.0 visualization stream 功能應用)</p>
-<div class="winkVideoPlayOverlayClass"><span></span></div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w6</h1>
+<p><span>建立個人 Blog 並查驗</span></p>
+<p><span>步驟</span></p>
+<p><span></span></p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="./../downloads/w6.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
 <div class="winkVideoPlayOverlayClass"></div>
-<br />w14 << <a href='w14.html'>Previous</a> <a href='Visualization Stream.html'>Next</a> >> Visualization Stream</div>
+</div><br />w3 << <a href='w3.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
         
     <!-- footer -->
       <div class="container">
