--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -428,6 +428,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 </div>
 </div>
+<h1>w6</h1>
+<p></p>
 <h1>w7</h1>
 <p><span>在系上網段, 可直接從 </span><a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88</a><span><span> </span>下載.</span><a href="http://wcm.cycu.org:88/compile_copsim_cd2022.7z">compile_copsim_cd2022.7z</a></p>
 <p><span>將自己的倉儲</span><span> <span>git clone --recurse-submodules 倉儲網址</span> 到compile_copsim_cd2022\data\tmp中</span></p>
@@ -749,7 +751,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="/downloads/online-1.mp4" type="video/mp4"/></video>
+      <source src="https://40923210.github.io/cd2022/downloads/online-1.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -772,8 +774,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="/downloads/online-2.mp4" type="video/mp4"/>
-</video>
+      <source src="https://40923210.github.io/cd2022/downloads/online-2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -783,4 +784,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div></div></div></div></div>
+</div>
+</div>
+</div>
+</div>
+</div>
