change w6 absolute site

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -429,8 +429,32 @@ var winkVideoData = {
 </div>
 </div>
 <h1>w6</h1>
-<p></p>
-<h1>w7</h1>
+<p><span>建立個人 Blog 並查驗</span></p>
+<p><span>步驟</span></p>
+<p><span></span></p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="/downloads/w6.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><h1>w7</h1>
 <p><span>在系上網段, 可直接從 </span><a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88</a><span><span> </span>下載.</span><a href="http://wcm.cycu.org:88/compile_copsim_cd2022.7z">compile_copsim_cd2022.7z</a></p>
 <p><span>將自己的倉儲</span><span> <span>git clone --recurse-submodules 倉儲網址</span> 到compile_copsim_cd2022\data\tmp中</span></p>
 <p><span><img alt="" height="630" src="https://40923210.github.io/cd2022/images/%E5%9C%96%E7%89%871.png" width="1008"/></span></p>
