--- a/content/w17.html
+++ b/content/w17.html
@@ -140,8 +140,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">online test << <a href='online test.html'>Previous</a> <br /><h1>w17</h1>
-<div class="winkVideoPlayOverlayClass"><span>將個人與分組協力完成之 uArm 機械手臂，加上 Suction Pad 執行取放 O X 物件，執行 Tic-Tae-Toe 遊戲場景模擬場景之 NX 零件檔案。</span></div>
-<div class="winkVideoPlayOverlayClass"><span></span></div>
+<p><span>利用</span><span>UARM</span><span>來執行Tic-Tae-Toe遊戲模擬</span></p>
+<p><span></span></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
