--- a/config/content.htm
+++ b/config/content.htm
@@ -808,8 +808,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <h2>w17</h2>
-<div class="winkVideoPlayOverlayClass"><span>將個人與分組協力完成之 uArm 機械手臂，加上 Suction Pad 執行取放 O X 物件，執行 Tic-Tae-Toe 遊戲場景模擬場景之 NX 零件檔案。</span></div>
-<div class="winkVideoPlayOverlayClass"><span></span></div>
+<p><span>利用</span><span>UARM</span><span>來執行Tic-Tae-Toe遊戲模擬</span></p>
+<p><span></span></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
