change w17 absolute site

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -808,9 +808,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <h2>w17</h2>
-<div class="winkVideoPlayOverlayClass"><span>利用</span><span>UARM</span><span>來執行Tic-Tae-Toe遊戲模擬</span></div>
-<p>--------------------------------------</p>
-<div class="winkVideoPlayOverlayClass"><span></span></div>
+<p><span>利用</span><span>UARM</span><span>來執行Tic-Tae-Toe遊戲模擬</span></p>
+<p><span></span></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -822,7 +821,8 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="/downloads/OOXX.mp4" type="video/mp4"/></video>
+      <source src="/downloads/OOXX.mp4" type="video/mp4"/>
+</video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
